kubernetes/projects/applications/apps/firefly-iii/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: finance
  labels:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: firefly-iii
    home-lab.io/project-slug: applications
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: firefly-iii
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: firefly-iii
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: firefly-iii
        home-lab.io/project-slug: applications
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/arch: arm64
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 33
        runAsNonRoot: true
        runAsUser: 33
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: firefly-iii
          # renovate: datasource=docker depName=docker.io/fireflyiii/core
          image: registry.home/docker.io/fireflyiii/core:version-6.7.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 90m
              memory: 204Mi
            limits:
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/storage/upload
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload-nfs
        - name: tmp
          emptyDir:
            sizeLimit: 512Mi
