kubernetes/projects/applications/apps/firefly-iii/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: finance
  labels:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: firefly-iii
    home-lab.io/project-slug: applications
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
