kubernetes/projects/applications/apps/firefly-iii/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  namespace: finance
  labels:
    app.kubernetes.io/name: firefly-iii
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: firefly-iii
    home-lab.io/project-slug: applications
spec:
  ingressClassName: traefik
  rules:
    - host: finance.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-iii
                port:
                  name: http
